002-landing-page/sources.css
/* "Roboto" font provided by fonts.google.com */
.roboto-thin {
  font-family: "Roboto", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.roboto-thin-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.roboto-light {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.roboto-light-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.roboto-regular {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.roboto-regular-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.roboto-medium {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.roboto-medium-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.roboto-bold {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.roboto-bold-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.roboto-black {
  font-family: "Roboto", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.roboto-black-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 900;
  font-style: italic;
}

/*
 *  The following font / color specifications are provided on the project page
 *  https://www.theodinproject.com/lessons/foundations-landing-page
 */

 :root {
    --main-content-width: 75%;
    --main-content-min-width: 620px;
    --main-content-max-width: 1000px;
 }

.header-dark-bg,
.footer-dark-bg {
    background-color: #1F2937;
}

.hero-main-text {
    font-family: "Roboto", sans-serif;
    font-weight: 900;
    font-size: 48px;
    color: #F9FAF8;
}

.hero-secondary-text,
.header-link-text {
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    font-size: 18px;
    color: #E5E7EB;
}

.header-logo-text {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 24px;
    color: #F9FAF8;
}

/* main layout */

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 0;
}

.header {
    flex: 0 0 300px;
}

.content {
    flex: 1 1 400px;
}

.footer {
    flex: 0 0 50px;
    margin-top: auto;
}

/*
 * From the design, content should be centered in the page. Extrapolating
 * from there, I would like the content to be dynamic but have a fixed
 * max-width.
 */
.centering {
    display: flex;
    justify-content: center;
}

.with-max-width {
    width: var(--main-content-width);
    min-width: var(--main-content-min-width);
    max-width: var(--main-content-max-width);
}

.header .container {
    flex-grow: 0;
    flex-shrink: 0;
}

.header nav {
    display: flex;
    align-items: center;
    padding: 10px;
}

.header ul {
    list-style-type: none;
    display: flex;
    justify-content: right;
    gap: 20px;
    margin-left: auto;
    margin-top: 0;
    margin-bottom: 0;
}

.header a {
    text-decoration: none;
}

